<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context="se.umu.id14ant.thirty.controller.PlayActivity">

    <TextView
        android:id="@+id/current_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_round"
        android:textSize="24sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/help_text"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/dice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:onClick="saveDie"
                android:padding="10dp"
                android:src="@drawable/white1" />

            <ImageButton
                android:id="@+id/dice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:onClick="saveDie"
                android:padding="10dp"
                android:src="@drawable/white2" />

            <ImageButton
                android:id="@+id/dice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:onClick="saveDie"
                android:padding="10dp"
                android:src="@drawable/white3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/dice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:onClick="saveDie"
                android:padding="10dp"
                android:src="@drawable/white4" />

            <ImageButton
                android:id="@+id/dice5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:onClick="saveDie"
                android:padding="10dp"
                android:src="@drawable/white5" />

            <ImageButton
                android:id="@+id/dice6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:onClick="saveDie"
                android:padding="10dp"
                android:src="@drawable/white6" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/throws_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/throws_left"/>

        <Button
            android:id="@+id/throw_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="throwDices"
            android:text="@string/throw_button" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right|bottom">

        <Button
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getScore"
            android:layout_margin="5dp"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/arrow_right"
            android:text="@string/score"/>
    </LinearLayout>


</LinearLayout>


