<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="se.umu.id14ant.thirty.controller.ScoreActivity">

    <TextView
        android:id="@+id/current_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_round"
        android:textSize="24sp" />
    
    <GridLayout
        android:id="@+id/dice_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:padding="30dp">

        <ImageButton
            android:id="@+id/dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:padding="10dp"
            android:clickable="false"
            android:src="@drawable/white1" />

        <ImageButton
            android:id="@+id/dice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:padding="10dp"
            android:clickable="false"
            android:src="@drawable/white2" />

        <ImageButton
            android:id="@+id/dice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:padding="10dp"
            android:clickable="false"
            android:src="@drawable/white3" />

        <ImageButton
            android:id="@+id/dice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:padding="10dp"
            android:clickable="false"
            android:src="@drawable/white4" />

        <ImageButton
            android:id="@+id/dice5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:padding="10dp"
            android:clickable="false"
            android:src="@drawable/white5" />

        <ImageButton
            android:id="@+id/dice6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:padding="10dp"
            android:clickable="false"
            android:src="@drawable/white6" />
    </GridLayout>

    <Spinner
        android:id="@+id/score_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/chosen_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:text="@string/show_score"/>
    <LinearLayout
        android:id="@+id/next_round"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom">

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="nextRound"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/arrow_right"
            android:text="@string/next_round" />
    </LinearLayout>

</LinearLayout>
